--- a/templates/result.html
+++ b/templates/result.html
@@ -6,12 +6,17 @@
 <body>
     <h1>Search Results</h1>
     <ul>
+        <!-- add links to results -->
+        <!-- add chatbot responses below results-->
         {% for result in results %}
-        <!-- add link to result[0]-->
         <a href="{{ result[0] }}">
         <li>{{ result[0] }} - {{ result[1] }}</li>
         </a>
+        <p>{{ result[2] }}</p>
         {% endfor %}
+
+
+
     </ul>
     <!-- Add a link back to the search page -->
     <a href="/">Back to search</a>
